# benchbox

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/src/benchbox_cli/: __init__.py  _output.py  app.py  bench.py  install.py  main.py  quickstart.py  site.py  stats.py  upgrade.py
cli/tests/: conftest.py  test_app.py  test_bench.py  test_bench_site_ops.py  test_install.py  test_main.py  test_site.py  test_stats.py
core/: README.md  pyproject.toml
core/src/benchbox_core/: __init__.py  app.py  bench.py  credentials.py  database.py  detect.py  discovery.py  introspect.py  logs.py  preferences.py  preflight.py  site.py  stats.py
core/src/benchbox_core/installer/: __init__.py  _run.py  _types.py  apt.py  bench_cli.py  mariadb.py  node.py  redis.py  runner.py  wkhtmltopdf.py
core/tests/: test_app.py  test_bench.py  test_bench_site_ops.py  test_credentials.py  test_database.py  test_detect.py  test_discovery.py  test_introspect.py  test_logs.py  test_preferences.py  test_preflight.py  test_site.py  test_stats.py
core/tests/installer/: test_apt.py  test_bench_cli.py  test_mariadb.py  test_node.py  test_redis.py  test_run.py  test_runner.py  test_types.py  test_wkhtmltopdf.py
docs/: user-guide.md
docs/screenshots/: README.md
gui/: README.md  pyproject.toml
gui/src/benchbox_gui/: __init__.py  main.py  main_window.py  workers.py
gui/src/benchbox_gui/resources/: __init__.py  style.qss  style_light.qss
gui/src/benchbox_gui/services/: bench_processes.py
gui/src/benchbox_gui/views/: apps.py  bench_detail.py  bench_list.py  databases.py  docs_view.py  install.py  logs_view.py  settings_view.py  sites.py  stats_banner.py  stubs.py
gui/src/benchbox_gui/widgets/: app_card.py  bench_actions.py  bench_card.py  bench_detail_header.py  bench_process_dock.py  bench_section.py  bench_summary_card.py  busy_label.py  card.py  card_grid.py  command_runner.py  component_card.py  dialogs.py  kpi_card.py  preflight_strip.py  site_card.py  site_tab.py  stat_pill.py
gui/tests/: conftest.py  test_apps_view.py  test_bench_list.py  test_bench_process_manager.py  test_command_runner.py  test_credentials_flow.py  test_databases_view.py  test_dialogs.py  test_docs_view.py  test_operation_worker.py  test_sites_view.py  test_stats_banner.py  test_workers.py
scripts/: install.sh  uninstall.sh
tests/e2e/: Dockerfile  README.md  verify.sh
