[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchbox-core"
version = "0.1.0"
description = "Frappe bench discovery, installation, and management — shared core for CLI and GUI."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "benchbox contributors" }]
dependencies = [
    "psutil>=5.9",
    "pydantic>=2.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-psutil>=5.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/benchbox_core"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
