[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchbox-gui"
version = "0.0.0"
description = "PySide6 desktop app for benchbox — Frappe bench manager."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "benchbox contributors" }]
dependencies = [
    "benchbox-core",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
benchbox-gui = "benchbox_gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchbox_gui"]

[tool.hatch.build.targets.wheel.force-include]
"src/benchbox_gui/resources/style.qss" = "benchbox_gui/resources/style.qss"
"src/benchbox_gui/resources/icons" = "benchbox_gui/resources/icons"

[tool.uv.sources]
benchbox-core = { path = "../core", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
# PySide6 ships only partial type stubs; relax a few specific strictness
# dials rather than disabling strict outright.
disable_error_code = ["no-any-unimported"]

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
# QT_QPA_PLATFORM=offscreen is set in tests/conftest.py; pytest's built-in
# options don't include env, and we don't want the extra pytest-env dep.
